src/objects/Partner_Application__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_RFID_Solution_Sales__c</fullName>
        <label>Competitor RFID Solution Sales</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Alien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluebird</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breezecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chainway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cipherlab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datalogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enjoyor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impinj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVENGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lucent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LXE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metrologic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mindeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newland</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Computer_Based_Call_Training__c</fullName>
        <label>Computer Based Call Training Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Offered</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <label>% Construction</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Vehicles_Other__c</fullName>
        <label>Contract Vehicles Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Vehicles__c</fullName>
        <label>Contract Vehicles</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNTPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHS EAGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHS FirstSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITES 2H/3H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITES 2S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETCENTS 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other BPAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other IDIQ/MAC Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Single Award Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEWP IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAWAR Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans Administration T4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Page__c</fullName>
        <label>Current Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Sell_in_Federal_Space__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Sell in Federal Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Joint_Moto_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Joint Moto Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Projects_Tech_Support_Pct__c</fullName>
        <label>Customer Projects Tech Support Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Company_Name__c</fullName>
        <label>Customer Reference Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Contact_Email__c</fullName>
        <label>Customer Reference Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Contact_Name__c</fullName>
        <label>Customer Reference Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Contact_Phone__c</fullName>
        <label>Customer Reference Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Devices__c</fullName>
        <label>Customer Reference Devices</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Advanced Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Critical Radio Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional and Commercial Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Go_Live_Date__c</fullName>
        <label>Customer Reference Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DHS__c</fullName>
        <label>% DHS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Describe_Competitive_Certifications__c</fullName>
        <label>Describe Competitive Certifications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Levels_of_Security_Clearance__c</fullName>
        <label>Describe Levels of Security Clearance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_Of_3rd_Party_Developed_S_W__c</fullName>
        <label>Description Of 3rd Party Developed S/W</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_Of_CompanyDeveloped_Software__c</fullName>
        <label>Description Of Company Developed S/W</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostics_Offered__c</fullName>
        <label>Diagnostics Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Compensated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Offered</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Type__c</fullName>
        <label>Fulfillment Type</label>
        <picklist>
            <picklistValues>
                <fullName>2-Step</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor_Referral_Email_Address__c</fullName>
        <label>Distributor Referral Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Distributor_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distributor Referral?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <picklist>
            <controllingField>How_did_you_hear_about_our_program__c</controllingField>
            <picklistValues>
                <fullName>Hutton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scansource</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Divison_of_or_Owned_by_Another_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Divison of or Owned by Another Company?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoD__c</fullName>
        <label>% Federal Sales DoD</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DoJ__c</fullName>
        <label>% DoJ</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Conduct_Code_Train__c</fullName>
        <label>Due Diligence Conduct Code Train</label>
        <picklist>
            <picklistValues>
                <fullName>Every 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every 2 years or greater</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Conduct_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Conduct Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Countries_APAC__c</fullName>
        <label>Due Diligence Countries APAC</label>
        <picklist>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Polynesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea, Republic of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lao People&apos;s Democratic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mongolia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Caledonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Mariana Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Papua New Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solomon Islands</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Countries_EMEA__c</fullName>
        <label>Due Diligence Countries EMEA</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabo Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comoros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo, The Democratic Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cote D&apos;ivoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Countries_LA__c</fullName>
        <label>Due Diligence Countries LA</label>
        <picklist>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadeloupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guyana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamaica</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Countries__c</fullName>
        <label>Due Diligence Countries</label>
        <picklist>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadeloupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guyana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamaica</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Govt_Emp_Name__c</fullName>
        <label>Due Diligence Govt Emp Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Govt_Emp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Govt Emp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Govt_Owner_Pct__c</fullName>
        <label>Due Diligence Govt Owner Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Govt_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Govt Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Purch_Influence_Name__c</fullName>
        <label>Due Diligence Purch Influence Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Purch_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Purch Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Resell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Resell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dun_Bradstreet1__c</fullName>
        <formula>TEXT(Dun_Bradstreet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dun &amp; Bradstreet #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dun_Bradstreet__c</fullName>
        <label>Dun &amp; Bradstreet #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_Commerce_Websites__c</fullName>
        <label>E-Commerce Websites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>% Education</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employees_w_Security_Clearance__c</fullName>
        <label># Employees w/Security Clearance</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EncryptedKey__c</fullName>
        <label>EncryptedKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Model__c</fullName>
        <label>Engagement Model</label>
        <picklist>
            <picklistValues>
                <fullName>BD Develop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM Develop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM Maintain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM Recruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Complete Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramp Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>